:bug: Fix disabled color on path toolbar  and alignment buttons

--- a/frontend/resources/styles/common/refactor/design-tokens.scss
+++ b/frontend/resources/styles/common/refactor/design-tokens.scss
@@ -23,8 +23,8 @@
   --button-background-color-focus: var(--color-background-secondary);
   --button-foreground-color-focus: var(--color-foreground-primary);
   --button-border-color-focus: var(--color-accent-primary);
-  --button-foreground-color-disabled: var(--color-foreground-secondary);
-  --button-background-color-disabled: var(--color-foreground-disabled);
+  --button-foreground-color-disabled: var(--color-foreground-disabled);
+  --button-background-color-disabled: var(--color-background-quaternary);
   --button-border-color-disabled: var(--color-background-quaternary);
 
   --button-primary-background-color-rest: var(--color-accent-primary);
