--- a/frontend/src/app/main/ui/workspace/sidebar/options/menus/bool.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/menus/bool.scss
@@ -30,12 +30,12 @@
   &.disabled {
     cursor: default;
     svg {
-      stroke: var(--button-background-color-disabled);
+      stroke: var(--button-foreground-color-disabled);
     }
     &:hover {
       background-color: var(--panel-background-color);
       svg {
-        stroke: var(--button-background-color-disabled);
+        stroke: var(--button-foreground-color-disabled);
       }
     }
   }
